--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                 <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/img_athulag.png" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. Lalith Goonatilake
-                                <small>Former Director - Trade Capacity Building, UNIDO</small>
+                            <h3>Prof. Athula Ginige
+                                <small>Western Sydney University</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -314,6 +314,24 @@
                 <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
+                        <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Dr. Lalith Goonatilake
+                                <small>Former Director - Trade Capacity Building, UNIDO</small>
+                            </h3>
+                            <!-- <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            </ul> -->
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <!-- 3 -->
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
                         <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                                <h3>Dr. Lochandaka Ranatunge
@@ -329,7 +347,7 @@
                     </figure>
                 </div>
 
-                <!-- 3 -->
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/AselaKulatunga.jpg" class="img-responsive" alt="Image"></a>
@@ -347,7 +365,10 @@
                     </figure>
                 </div>
 
-                <!-- 4 -->
+            </div>
+            <div class="row">
+
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJulianNanayakkara.jpg" class="img-responsive" alt="Image"></a>
@@ -367,10 +388,7 @@
                     </figure>
                 </div>
 
-            </div>
-            <div class="row">
-
-                <!-- 1 -->
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJanakaWijenayaka.jpg" class="img-responsive" alt="Image"></a>
@@ -390,7 +408,7 @@
                     </figure>
                 </div>
 
-                <!-- 2 -->
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
@@ -409,7 +427,7 @@
                     </figure>
                 </div>
 
-                <!-- 3 -->
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrNiroshinie Fernando.jpg" class="img-responsive" alt="Image"></a>
@@ -428,7 +446,10 @@
                     </figure>
                 </div>
 
-                <!-- 4 -->
+            </div>
+            <div class="row">
+
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrSachinthaPitigala.jpg" class="img-responsive" alt="Image"></a>
@@ -440,10 +461,7 @@
                     </figure>
                 </div>
 
-            </div>
-            <div class="row">
-
-                <!-- 1 -->
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/aw.jpg" class="img-responsive" alt="Image"></a>
@@ -455,7 +473,7 @@
                     </figure>
                 </div>
 
-                <!-- 2 -->
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/rw.jpg" class="img-responsive" alt="Image"></a>
@@ -467,24 +485,12 @@
                     </figure>
                 </div>
 
-                <!-- 3 -->
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/sj.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. Shantha Jayalal
-                                <small>University of Kelaniya, Sri Lanka</small>
-                            </h3>
-                        </figcaption>
-                    </figure>
-                </div>
-
-                <!-- 4 -->
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
-                        <a href="#"><img src="img/kw.jpg" class="img-responsive" alt="Image"></a>
-                        <figcaption class="caption text-center">
-                            <h3>Dr. Keerthi Wijayasiriwardhane
                                 <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
                         </figcaption>
@@ -497,6 +503,18 @@
                 <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
+                        <a href="#"><img src="img/kw.jpg" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Dr. Keerthi Wijayasiriwardhane
+                                <small>University of Kelaniya, Sri Lanka</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <!-- 2 -->
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
                         <a href="#"><img src="img/tr.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. Thashika Rupasinghe
@@ -506,7 +524,7 @@
                     </figure>
                 </div>
 
-                <!-- 2 -->
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drcrajapaksha.jpg" class="img-responsive" alt="Image"></a>
@@ -517,8 +535,20 @@
                         </figcaption>
                     </figure>
                 </div>
+
+                <!-- 4 -->
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#"><img src="img/drdwick.jpg" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Dr. Dilani Wickramarachchi
+                                <small>University of Kelaniya, Sri Lanka</small>
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
                 
-                <!-- /.col-sm-6 -->
+                <!-- /.col-sm-6
                 <!-- 3 -->
                 <!-- <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
@@ -743,7 +773,7 @@
                     <div class="pricing-table-default text-center">
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i" style="text-align: left;">
-                                <li> <h5 style="color:black;">INSTRUCTIONS:</h5></li>
+                                <li> <h5 style="color:black;">INSTRUCTIONS FOR ONLINE REGISTRATION:</h5></li>
                                 <li> <h5 style="color:black;">Under <b>Payment Instructions</b> select <b>Faculty of Science</b> from the dropdown list for <b>Faculty</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>International Research Conference on Smart Computing and Systems Engineering</b> from the dropdown list for <b>Payment For</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b></h5></li>
@@ -1194,7 +1224,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; ircSCSE. All rights reserved | v1.31 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.33 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
