--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i" style="text-align: left;">
                                 <li> <h5 style="color:black;">INSTRUCTIONS FOR ONLINE REGISTRATION:</h5></li>
+                                <li> <h5 style="color:black;">Click on <b>REGISTER ONLINE</b> button below to go to <b>Online Payment page</b> of University of Kelaniya</h5></li>
                                 <li> <h5 style="color:black;">Under <b>Payment Instructions</b> select <b>Faculty of Science</b> from the dropdown list for <b>Faculty</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>International Research Conference on Smart Computing and Systems Engineering</b> from the dropdown list for <b>Payment For</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b></h5></li>
