--- a/index.html
+++ b/index.html
@@ -121,11 +121,23 @@
                             </h5>
                         </div>
                         <div class="importantDateColItem"><strong>Notification of Acceptance</strong><br>
-                        <h5 style="color:#0e1555;">25th February 2018</h5></div>
+                            <h5 style="color:#0e1555;">
+                                <del>25th February 2018</del><br>
+                                7th March 2018
+                            </h5>
+                        </div>
                         <div class="importantDateColItem"><strong>Final paper Submission</strong><br>
-                        <h5 style="color:#0e1555;">1st March 2018</h5></div>
+                            <h5 style="color:#0e1555;">
+                                <del>1st March 2018</del><br>
+                                12th March 2018
+                            </h5>
+                        </div>
                         <div class="importantDateColItem"><strong>Early-bird Registration</strong><br>
-                        <h5 style="color:#0e1555;">7th March 2018</h5></div>
+                            <h5 style="color:#0e1555;">
+                                <del>7th March 2018</del><br>
+                                15th March 2018
+                            </h5>
+                        </div>
                         <div class="importantDateColItem"><strong>Conference</strong><br>
                         <h5 style="color:#0e1555;">29th March 2018</h5></div>
                         </center>
@@ -743,6 +755,7 @@
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
+                        <h5 class="earlybirdBanner">ENDS THURSDAY, MARCH 15TH</h5>
                     </div>
                     <!-- /.pricing-table-wrapper -->
                 </div>
@@ -1225,7 +1238,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.4 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.41 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
