--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1><img src="img/RegisterNow2.png" style="width: 150px; vertical-align: text-bottom; float: left; margin-right: -220px; margin-top: -150px; margin-bottom: -150px; padding-left: 10px; transform: rotate(-35deg);">REGISTRATION</h1>
-                        <h5 style="color:#0e1555;">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk to register, or follow instructions below to register online</h5>
+                        <h5 style="color:#0e1555;">Call +94(0)11 2903282-5, +94766724753 or email to scse@kln.ac.lk to register</h5>
                     </div>
                 </div>
             </div>
@@ -786,11 +786,11 @@
                     <div class="pricing-table-default text-center">
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i" style="text-align: left;">
-                                <li> <h5 style="color:black;">INSTRUCTIONS FOR ONLINE REGISTRATION:</h5></li>
-                                <li> <h5 style="color:black;">Click on <b>REGISTER ONLINE</b> button below to go to <b>Online Payment page</b> of University of Kelaniya</h5></li>
+                                <li> <h5 style="color:black;">INSTRUCTIONS FOR ONLINE PAYMENT:</h5></li>
+                                <li> <h5 style="color:black;">Click on <b>PAY ONLINE</b> button below to go to <b>Online Payment page</b> of University of Kelaniya</h5></li>
                                 <li> <h5 style="color:black;">Under <b>Payment Instructions</b> select <b>Faculty of Science</b> from the dropdown list for <b>Faculty</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>International Research Conference on Smart Computing and Systems Engineering</b> from the dropdown list for <b>Payment For</b></h5></li>
-                                <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b></h5></li>
+                                <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b> obtained through Conference Secretary</h5></li>
                                 <li> <h5 style="color:black;">Enter contact details and proceed to pay online</h5></li>
                             </ul>
                         </div>
@@ -806,7 +806,7 @@
                         <div class="pricing-detail">
                             <div class="col-sm-12">
                                 <center>
-                                    <a href="https://sis.kln.ac.lk/PayService/ClientApp/" class="btn btn-primary scse-wide-button">Register Online</a>
+                                    <a href="https://sis.kln.ac.lk/PayService/ClientApp/" class="btn btn-primary scse-wide-button">Pay Online</a>
                                 </center>
                             </div>
                         </div>
@@ -1238,7 +1238,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.41 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.42 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
