--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
                                 <li> <h5 style="color:black;">Click on <b>PAY ONLINE</b> button below to go to <b>Online Payment page</b> of University of Kelaniya</h5></li>
                                 <li> <h5 style="color:black;">Under <b>Payment Instructions</b> select <b>Faculty of Science</b> from the dropdown list for <b>Faculty</b></h5></li>
                                 <li> <h5 style="color:black;">Select <b>International Research Conference on Smart Computing and Systems Engineering</b> from the dropdown list for <b>Payment For</b></h5></li>
-                                <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b> obtained through Conference Secretary</h5></li>
+                                <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>"scse2018"</b> for <b>Application/ Registration Number</b></h5></li>
                                 <li> <h5 style="color:black;">Enter contact details and proceed to pay online</h5></li>
                             </ul>
                         </div>
