--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-intro">About</a></li>
+                        <li><a id="navbarPrecon" class="page-scroll" href="#section-precon">Preconference</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <li><a id="navbarSubmission" class="page-scroll" href="#section-guidelines">Guidelines</a></li>
@@ -83,6 +84,7 @@
             <font size="50"><b>International Research Conference on<br><br>Smart Computing and Systems Engineering</b></font>
             <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">Guidelines</button>
+            <button type="button" class="btn btn-default btn-lg" onclick="navbarPrecon.click()">Preconference</button>
             <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button>
             <!-- <a href="res/IRCSCSE Guidelines for abstract submission - Ver 2.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a> -->
         </div>
@@ -156,7 +158,86 @@
     </section>
     <!-- .about-event -->
 
-    <section id="section-speaker" class="section-wrapper team gray-bg">
+    <section id="section-precon" class="section-wrapper about-event gray-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
+                        <h1>PRE-CONFERENCE</h1><br>
+                        28<sup>th</sup> March, 2018
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-7">
+                    <p class="lead ircscseTextJustify">
+                        <strong style="font-size: 120%;">"Smart Computing in Action" by Prof. Athula Ginige</strong><br><br>
+                        This workshop is organized by the Department of Industrial Management, as an independent event along with the International Conference on Smart Computing and Systems Engineering, and will be held on the 28th March, 2018 from 1.30 p.m. onwards, at the Department Premises.
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        The advances in computer hardware, software, social media and communication networks together with digital sensors, smart devices, internet technologies, big data analytics, computational intelligence and intelligent systems have given rise to a new computing paradigm: Smart Computing. This paradigm can be broadly classified into two major areas:
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        <b>-</b> How to design and build smart computing systems<br>
+                        <b>-</b> How to use computing technology to design smart systems to make human life better.
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        Aim of this workshop is to explore how to use Smart Computing to design smart systems to make human life better. Systems thinking will be used to guide this exploration.
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        The workshop will consist of two parts.
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        a) In the first part, few applications from health and agriculture domain developed using Smart Computing will be presented and discussed. In the process participants will be shown the need to identify the root cause for the problem and how an innovative solution has been developed using Smart Computing to address the root cause.<br>
+                        b) In the second part, participants will be encouraged to put what they have learned in the first part into practice. Participants will be asked to identify a human problem that they are familiar with to which an innovative solution can be found using the fact that we are now a digitally connected society. Once a suitable problem is identified they will be guided to identify the root cause and develop a conceptual solution.
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <p><center>
+                        <div class="importantDateColItem">
+                            <img class="img-fluid" src="img\precon.png">
+                        </div>
+                        <br><br>
+                        <div class="importantDateColItem">
+                            <strong>On Wednesday, 28<sup>th</sup> March, 2018 from 1.30PM onwards at the Department of Industrial Management</strong>
+                        </div>
+                        <br>
+                        <div class="importantDateColItem">
+                            <strong>ENTRANCE FREE</strong>
+                        </div>
+                        <br>
+                        <div class="importantDateColItem">
+                            <strong>Participants should register prior to the workshop as limited seats are available</strong>
+                        </div>
+                        <br>
+                        <div class="importantDateColItem">
+                            <center>
+                                <a href="./precon" class="btn btn-primary scse-wide-button">REGISTER ONLINE NOW</a>
+                            </center>
+                        </div>
+                    </center>
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="lead ircscseTextJustify">
+                        <strong>About the Presenter</strong>
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        Athula Ginige is a Professor of Information Technology at Western Sydney University (WSU), Australia and he leads the Social Computing and Knowledge Ecosystems Research Program at the School of Computing, Engineering and Mathematics.  This program focuses on developing knowledge driven Social Computing solutions, delivered via mobile based systems to a range of applied problems including "Grand Challenges" in diverse areas such as agriculture, healthcare, business and education. His current research areas include both autonomous and participatory sensor networks, knowledge aggregation and event detection, large scale knowledge organisation based on ontologies and semantic web technologies, context modelling, designing mobile based systems for user empowerment and Social Computing. Digital Knowledge Ecosystems integrate all these technologies and methodologies to provide innovative and sometimes disruptive solutions to real world challenges.
+                    </p>
+                    <p class="lead ircscseTextJustify">
+                        Prof. Ginige has previously done some pioneering work to establish the discipline area of Web Engineering, which he is now extending to mobile based applications. He has also done extensive research in the areas of e-Business and e-Transformation. In 2016 he won the Australian Computer Society Digital Disrupter Gold award for developing the Digital Knowledge Ecosystem for Agribusiness. He has over 250 Journal and Conference publications and given many keynotes at conferences.  He has successfully supervised 15 PhD students. He graduated with B.Sc. Engineering first class honours from University of Moratuwa, Sri Lanka. He obtained his Ph.D. from the University of Cambridge, England in 1987.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- .about-event -->
+
+    <section id="section-speaker" class="section-wrapper team">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -614,7 +695,7 @@
     </section>
     <!-- .team -->
 
-    <section id="section-ajenda" class="section-wrapper section-ajenda" >
+    <section id="section-ajenda" class="section-wrapper section-ajenda gray-bg" >
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -674,7 +755,7 @@
     </section>
 
     <!-- Guidelines -->
-    <section id="section-guidelines" class="section-wrapper pricing-section gray-bg">
+    <section id="section-guidelines" class="section-wrapper pricing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -730,7 +811,7 @@
     <!-- .pricing-section -->
 
     <!-- Registration -->
-    <section id="section-pricing" class="section-wrapper pricing-section">
+    <section id="section-pricing" class="section-wrapper pricing-section gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -755,7 +836,7 @@
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
-                        <h5 class="earlybirdBanner">ENDS THURSDAY, MARCH 15TH</h5>
+                        <h5 class="earlybirdBanner">ENDED THURSDAY, MARCH 15TH</h5>
                     </div>
                     <!-- /.pricing-table-wrapper -->
                 </div>
@@ -843,7 +924,7 @@
     <!-- .pricing-section -->
 
     <!-- Accommodation -->
-    <section id="section-accommodation" class="section-wrapper section-ajenda gray-bg">
+    <section id="section-accommodation" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1089,7 +1170,7 @@
     </section> -->
 
 
-    <section id="organiziners" class="section-wrapper section-ajenda">
+    <section id="organiziners" class="section-wrapper section-ajenda gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1159,7 +1240,7 @@
     </section>
 
 
-    <section id="section-venue" class="section-wrapper  gray-bg">
+    <section id="section-venue" class="section-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1238,7 +1319,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.42 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.44 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
@@ -1250,7 +1331,6 @@
 
 </div>
 <!-- #main-wrapper -->
-
 
 <!-- jquery -->
 <script src="js/jquery-2.1.4.min.js"></script>
