--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <!-- <li><a id="navbarSubmission" class="page-scroll" href="#section-guidelines">Guidelines</a></li> -->
-                        <!-- <li><a id="navbarRegister" class="page-scroll" href="#section-pricing">Registration</a></li> -->
+                        <li><a id="navbarRegister" class="page-scroll hidden-xs hidden-sm hidden-md hidden-lg" href="#section-pricing">Registration</a></li>
                         <li><a class="page-scroll" href="#section-accommodation">Accommodation</a></li>
                         <li><a class="page-scroll" href="#organiziners">Organizers</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
@@ -90,7 +90,7 @@
             <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">Guidelines</button> -->
             <button type="button" class="btn btn-default btn-lg" onclick="navbarPrecon.click()">Preconference</button>
-            <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button> -->
+            <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button>
             <!-- <a href="res/IRCSCSE Guidelines for abstract submission - Ver 2.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a> -->
         </div>
     </div>
@@ -134,7 +134,7 @@
                                 <span style="font-size: 80%;">
                                     Entrance Free. Limited number of seats.
                                 </span><br>
-                                <span><a href="#section-precon">Register Now</a></span>
+                                <span><a class="page-scroll" href="#section-precon">Register Now</a></span>
                             </p>
                             <h5 style="color:#0e1555;">
                                     28<sup>th</sup> MARCH 2018<br>
@@ -149,7 +149,8 @@
                                 Visit the Registration Check In desk 8 A.M. to make payments and obtain conference pack.<br>
                                 <span style="font-size: 80%;">
                                     Entrance: Local LKR 1500 | SAARC US$ 85 | Other Countries US$ 125
-                                </span>
+                                </span><br>
+                                <span><a class="page-scroll" href="#section-pricing">Register Now & Pay Online</a></span>
                             </p>
                             <h5 style="color:#0e1555;">
                                 29<sup>th</sup> March 2018<br>
@@ -909,7 +910,7 @@
     <!-- content END -->
 
     <!-- Guidelines -->
-    <!-- <section id="section-guidelines" class="section-wrapper pricing-section">
+    <section id="section-guidelines" class="section-wrapper pricing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -939,11 +940,11 @@
                 </div>
             </div> 
         </div>
-    </section> -->
+    </section>
     <!-- Guidelines END -->
 
     <!-- Registration -->
-    <!-- <section id="section-pricing" class="section-wrapper pricing-section gray-bg">
+    <section id="section-pricing" class="section-wrapper pricing-section gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1016,7 +1017,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- registration END -->
 
     <!-- Accommodation -->
@@ -1415,7 +1416,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.45 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.46 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
